--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -29,6 +29,14 @@ jobs:
         with: 
           python-version: 3.12
 
+      - name: Install poetry
+        run: |
+          python -m pip install poetry
+
+      - name: Configure poetry
+        run: |
+          python -m poetry config virtualenvs.in-project true
+
       # Runs a set of commands using the runners shell
       - name: install dependencies
         run: |
