--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -29,6 +29,10 @@ jobs:
         with: 
           python-version: 3.12
 
+      - name: upgrade pip
+        run: |
+          pip install --upgrade pip
+          
       - name: Install poetry
         run: |
           python -m pip install poetry
