--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Configure poetry
         run: |
           python -m poetry config virtualenvs.in-project true
+          
+      - name: Add Poetry venv to PATH
+        run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
 
       # Runs a set of commands using the runners shell
       - name: install dependencies
